# fc_env

./: .dockerignore  .gitignore  BLOG_POST.md  Dockerfile  FINAL_CHECKLIST.md  HF_PROGRESS.md  HF_RULES.md  PROJECT_LOG.md  README.md  RULES2.md  RULES3.md  RULES_REFERENCE.md  __init__.py  app.py  benchmark.py  client.py  environment.py  fc_env_environment.py  gradio_ui.py  gym_env.py  gym_wrapper.py  kernel_sandbox.py  model_suggest.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py  test_env.py  test_policy.py  test_random.py  train.py  trl_train.py
artifacts/: eval_1200k.json  eval_300k.json  eval_500k.json  evaluation.json  q_table.json  training_metrics.csv  trl_summary.json
core/: __init__.py  env_server.py
models/: vecnormalize.pkl
server/: __init__.py  app.py  fc_env_environment.py
